fixing css alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,8 +11,6 @@ body {
 
 /*--------------------------------------navbar*/
 
-
-
 .row {
     margin-right: 0;
     margin-left: 0;
@@ -143,7 +141,6 @@ body {
 
 /*--------------------------------------Body */
 
-
 .callout-container {
     height: 100vh;
 
@@ -199,7 +196,7 @@ h6,
 p {
     padding-left: 5px;
     padding-right: 5px;
-    }
+}
 
 
 /*---------------------------------HOVER*/
@@ -232,23 +229,62 @@ p {
 /*----------------------------------Footer*/
 
 .social-media-links {
-    font-size: 30px;
-    margin-left: 15px;
+    font-size: 40px;
     text-align: center;
-    margin-right: 15px;
-    background-color: yellow;
-    border-color: yellow;
+    background-color: #ffff00;
+    /*yellow*/
+    border-color: #ffff00;
+    /*yellow*/
 }
 
 .footer {
-    background-color: #D3D3D3;
-    color: #000000;
-    bottom: -1;
+    background-color: #e8fcf5;    /*blueish*/
     width: 100%;
     text-align: center;
-    min-height: 10vh;
+    min-height: 20vh;
+    margin-bottom: 0;
+    padding-top: 5px;
+    margin-top: 5px;
+    position: relative;
 }
 
+.footer-bottom {
+    position: inherit;
+    right: 0;
+    left: 0;
+    padding: 1rem;
+    text-align: center;
+}
+
+.footer-booking-theband {
+    position: inherit
+}
+
+.last-section {
+    margin-bottom: 20px;
+}
+
+.contact-envelope {
+    font-size: 25px;
+}
+
+.footer-heading {
+    text-align: center;
+}
+
+.footer-bookings {
+    background-color: #e8fcf5;
+    min-height: 100vh;
+}
+
+.last-section {
+    height: 60vh;
+}
+
+.form-group p {
+    font-size: 1em;
+    font-family: 'Roboto';
+}
 
 
 /*-------------------------------HOME-PAGE*/
@@ -261,59 +297,7 @@ p {
     align-items: center;
 }
 
-/*-------------------------------THE-BAND*/
-.callout-container1 {
-    min-height: 100vh;
-    font-family: 'Roboto', sans-serif;
-    background: url("../images/8members.png") no-repeat center;
-    -webkit-background-size: 800px;
-    -moz-background-size: 800px;
-    -o-background-size: 800px;
-    background-size: 800px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    top: 0px;
-    margin-top: 0;
-    }
-   
-   .the-band-wrapper-blue {
-    background-color: #2098d1;
-    color: #FFFFFF;
-    padding: 5px;
-    margin-right: auto;
-    margin-left: auto;
-    max-width: 600px;
-    
-    }
-  
-  .the-band-headline {
-    font-family: 'Roboto', sans-serif;
-    font-weight: 500;
-    text-align: center;
-
-    }
-    
-  .about-the-band {
-    font-family: 'Roboto', sans-serif;
-    font-size: 20px;
-text-align: center;
-
-    }
-    
-/*-------------------------------TRACKS*/
-
-#tracks {
-    background-color: #2098d1;
-    color: #FFFFFF;
-    padding: 15px;
-    text-align: center;
-}
-
-.top-tracks{
-   margin: 0 auto;
-}
+/*------------End OF------------HOME-PAGE*/
 
 /*-------------------------------TOUR-DATES*/
 
@@ -321,6 +305,7 @@ text-align: center;
     color: #000000;
     margin-top: 80px;
     text-align: center;
+    font-size: 40px;
 }
 
 .table-striped,
@@ -341,80 +326,155 @@ th {
     margin-right: auto;
     overflow: scroll;
     min-height: 100vh;
-    }
-    
- .tickets {
+}
+
+.tickets {
     color: #7f0000;
     transition: 0.6s;
-    }
-    
- .fa-ticket:hover {
+}
+
+.fa-ticket:hover {
     color: #7f0000;
     -ms-transform: hvr-grow;
     -webkit-transform: hvr-grow;
     -moz-transform: hvr-grow;
     -o-transform: hvr-grow;
     transform: hvr-grow;
-    }
+}
 
 a:hover {
     text-decoration: none;
     color: #7f0000;
-    }   
+}
 
-/*-------------------------------BOOKINGS*/
+/*-----End of---------------TOUR-DATES*/
+
+/*-------------------------------MUSIC*/
+
+#tracks {
+    background-color: #2098d1;
+    color: #FFFFFF;
+    padding: 15px;
+    text-align: center;
+}
+
+.top-tracks {
+    margin: 0 auto;
+}
+
+/*----------End OF---------------MUSIC*/
+
+/*-------------------------------THE-BAND*/
+.the-band{
+    text-align: center;
+}
+
+.callout-container1 {
+    min-height: 100vh;
+    font-family: 'Roboto', sans-serif;
+    background: url("../images/8members.png") no-repeat center;
+    -webkit-background-size: 800px;
+    -moz-background-size: 800px;
+    -o-background-size: 800px;
+    background-size: 800px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: relative;
+    top: 0px;
+    margin-top: 0;
+}
+
+.the-band-wrapper-blue {
+    background-color: #2098d1;
+    color: #FFFFFF;
+    padding: 5px;
+    margin-right: auto;
+    margin-left: auto;
+    max-width: 600px;
+
+}
+
+.the-band-headline {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    text-align: center;
+
+}
+
+.about-the-band {
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    text-align: center;
+}
+
+/*--------End of----------------THE-BAND*/
+
+/*-------------------------------VIDEOS*/
+
+/*--------End OF-------------VIDEOS*/
 
 /*-------------------------------GALLERY*/
+
 .section-header {
     text-align: center;
 }
 
- .featured-image {
+.featured-image {
     width: 100%;
     height: auto;
     overflow: hidden;
-    } 
-    
-    .photo-gallery  {
+}
+
+.photo-gallery {
     align-items: center;
     display: -webkit-box;
     display: -moz-box;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: flex;
-  
-  -webkit-flex-flow: row wrap;
-  justify-content: space-around;
-    }
-    
-    .opaque-overlay3 {
+
+    -webkit-flex-flow: row wrap;
+    justify-content: space-around;
+}
+
+.opaque-overlay3 {
     position: absolute;
     top: 0;
     left: 0;
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
-    }
-    
- div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6{
-  padding: 2px 10px 10px 30px;
-  align-items: center;
-    }
-  
-  div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6 img{
-  height: 220px;
-  width: 320px;
-  }
-/*-------------------------------VOTE*/
+}
+
+div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6 {
+    padding: 2px 10px 10px 30px;
+    align-items: center;
+}
+
+div.imagetiles div.col-lg-3.col-md-3.col-sm-3.col-xs-6 img {
+    height: 220px;
+    width: 320px;
+}
+
+/*-------------End OF-------------GALLERY*/
+
+/*-------------------------------BOOKINGS*/
+
+/*--------End OF-------------BOOKINGS*/
 
 /*-------------------------------BUY-TICKETS*/
 
+/*----------END OF-------------BUY-TICKETS*/
+
 /*---------------------------------JUMBOTRAN*/
-
-jumbotron text-center {
-    background-color: orange;
+.jumbotron {
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    color: inherit;
+    background-color: #d9bf6a;
 }
-
 
 .block-divider--black {
     background-color: black;
@@ -422,13 +482,9 @@ jumbotron text-center {
     width: 45%;
 }
 
+/*----------End OF-------------JUMBOTRAN*/
+
 /*---------------------------------Media Queries*/
 
-.footer {
-    min-height: 10vh;
-    bottom: -1;
-    margin-bottom: 0;
-    padding-top: 30px;
-    margin-top: 10px;
-}
 
+/*-------------End OF------------Media Queries*/
